@@ -35,12 +35,16 @@ public class CourseSectionServiceImpl extends BaseService implements CourseSecti
     private final CourseRepo courseRepo;
 
     @Override
-    public List<CourseSectionRes> get() {
-        List<CourseSectionEntity> result = this.repo.findAllByStatus(DataStatus.AKTIF);
+    public List<CourseSectionRes> getByCourseId(String courseId) {
+        List<CourseSectionEntity> result = this.repo.findAllByCourseId(courseId);
         if(result.isEmpty()){
             return Collections.emptyList();
         }
-        return result.stream().map(this::convertEntityToRes).collect(Collectors.toList());
+
+        List<CourseSectionEntity> sections = result.stream()
+                .filter(f -> f.getParentId() == null || f.getCourseId() == null)
+                .toList();
+        return sections.stream().map(this::convertEntityToRes).collect(Collectors.toList());
     }
 
     @Override
@@ -104,6 +108,10 @@ public class CourseSectionServiceImpl extends BaseService implements CourseSecti
     private CourseSectionRes convertEntityToRes(CourseSectionEntity entity){
         CourseSectionRes result = new CourseSectionRes();
         BeanUtils.copyProperties(entity, result);
+        if(entity.getChildren().size() > 0){
+            List<CourseSectionRes> children = entity.getChildren().stream().map(this::convertEntityToRes).collect(Collectors.toList());
+            result.setChildren(children);
+        }
         return result;
     }
 
